clusters/proxmox-home/observability/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: grafana-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.mgsds.com
  rules:
    - host: grafana.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
